published-docs/19.2.12/forms/input-color/sd-input-color.md
# `<sd-input-color>`

**Type**: Form control (composes `<sd-input>`)
**Selector**: `sd-input-color`
**Import path**: `@sdcorejs/angular/forms/input-color`
**Class**: `SdInputColor`
**Standalone**: yes
**Change detection**: OnPush

## One-line purpose

A hex color input with a swatch suffix that opens the browser's native color picker. Users can type a hex value manually or pick visually — both update the same model.

## When to use

- Theme / brand color settings (logo color, accent color, badge color)
- Tagging entities with a color (project tags, calendar events, custom labels)
- Wherever a `#RRGGBB` field would otherwise be a plain text input

## When NOT to use

- Free-form color names ("red", "navy") — use `<sd-select>` with a curated palette
- Multi-stop gradient editor — beyond scope; use a dedicated picker library
- Theme picker with curated brand palette only — `<sd-select>` + a `[color]` input renders previewable swatches cleanly without exposing arbitrary hex

## Inputs (forwarded to inner `<sd-input>` unless noted)

| Name              | Type                                            | Default     | Notes                                                                                                                                                                                                                                                                                                                                               |
| ----------------- | ----------------------------------------------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `label`           | `string \| undefined`                           | —           | Label above / inside the field                                                                                                                                                                                                                                                                                                                      |
| `helperText`      | `string \| undefined`                           | —           | Tooltip text on the label info icon                                                                                                                                                                                                                                                                                                                 |
| `placeholder`     | `string`                                        | `'#RRGGBB'` | Input placeholder                                                                                                                                                                                                                                                                                                                                   |
| `size`            | `'sm' \| 'md'`                                  | `'md'`      | Forwarded to inner `<sd-input>`. Use `size="sm"` inside `<sd-table>` filters/cells or other dense table UI.                                                                                                                                                                                                                                         |
| `appearance`      | `MatFormFieldAppearance \| undefined`           | inherits    | Forwarded                                                                                                                                                                                                                                                                                                                                           |
| `form`            | `FormGroup \| NgForm \| undefined`              | —           | When set, the inner control registers under `name`                                                                                                                                                                                                                                                                                                  |
| `name`            | `string \| undefined`                           | —           | FormGroup control name                                                                                                                                                                                                                                                                                                                              |
| `autoId`          | `string \| undefined`                           | —           | E2E selector                                                                                                                                                                                                                                                                                                                                        |
| `required`        | `boolean`                                       | `false`     | Required validator                                                                                                                                                                                                                                                                                                                                  |
| `disabled`        | `boolean`                                       | `false`     | Disable input + swatch                                                                                                                                                                                                                                                                                                                              |
| `readonly`        | `boolean`                                       | `false`     | Read-only input + swatch click disabled                                                                                                                                                                                                                                                                                                             |
| `clearable`       | `boolean`                                       | `false`     | Shows the inner `<sd-input>` clear button when the color has a value and the field is editable/not required.                                                                                                                                                                                                                                        |
| `hideInlineError` | `boolean`                                       | `false`     | Forwarded to inner `<sd-input>`; hides inline error text and uses compact error tooltip UI. Use this inside table cells.                                                                                                                                                                                                                            |
| `viewed`          | `boolean \| 'inline'`                           | `false`     | Display mode, forwarded verbatim to the inner `<sd-input>`. `false` = edit. `true` = static read-only DETAIL. `'inline'` = borderless click-to-edit (transparent input; the swatch stays interactive). Disabled `'inline'` degrades to the static `true` view inside `<sd-input>` (no editable suffix swatch). Uses the shared `sdViewedTransform`. |
| `model`           | `string \| null \| undefined` (model — two-way) | `undefined` | Hex value `#RGB` / `#RRGGBB` / `#RRGGBBAA`                                                                                                                                                                                                                                                                                                          |

## Outputs

| Name       | Type                          | Notes                                                |
| ---------- | ----------------------------- | ---------------------------------------------------- |
| `sdChange` | `string \| null \| undefined` | Emitted on every value change (typed input + picker) |

## Public constant

| Name                         | Type     | Notes                                                                                                 |
| ---------------------------- | -------- | ----------------------------------------------------------------------------------------------------- |
| `SD_INPUT_COLOR_HEX_PATTERN` | `string` | The regex used for validation. Exported in case consumers want to apply the same hex check elsewhere. |

## Public methods

| Name                | Signature          | Notes                                                                                                                                                                                                                                                           |
| ------------------- | ------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `openPicker()`      | `() => void`       | Opens the native browser color picker. No-op when `disabled`, `readonly`, or `viewed === true` (static view). **Works in `viewed="'inline'"`** — inline is still editable. |
| `clear(ev?: Event)` | `(Event?) => void` | Programmatic clear — sets the model to `null` and emits `sdChange(null)`. No-op when `required`, `disabled`, `readonly`, `viewed === true`, or already empty. **Works in `viewed="'inline'"`**. The **visible** clear button is rendered by the inner `<sd-input>` (built-in), not by this method. |

## Public signals

| Name         | Type             | Notes                                                                                                            |
| ------------ | ---------------- | ---------------------------------------------------------------------------------------------------------------- |
| `isViewed()` | `Signal<boolean>`| `true` only for `viewed === true` — and for `disabled` + `viewed === 'inline'`, which degrades to the static view. |
| `isInline()` | `Signal<boolean>`| `true` for `viewed === 'inline'` while the control is still editable.                                             |

Both come from the shared `sdViewedInline()` composable, the same primitive the other form controls use. **Gate on `isViewed()`, never on the raw `viewed()`** — `viewed` is tri-state (`boolean | 'inline'`) and `'inline'` is truthy, so a raw truthiness check silently disables inline mode.

## Behaviors / quirks

- **Two-way `[(model)]`** — picker and text input both write to the same `model` signal.
- **Hex pattern validation** — built in. Accepts `#RGB`, `#RRGGBB`, `#RRGGBBAA`. Invalid input shows the inline error message "Mã màu HEX không hợp lệ (vd #1565C0)".
- **Picker canonicalization** — `<input type="color">` only accepts `#RRGGBB`. The component expands `#RGB` and strips alpha from `#RRGGBBAA` before feeding the picker, so the picker always opens on a valid 6-char hex.
- **Swatch preview** — shows the raw model value (including alpha). When the value is empty or invalid, the swatch falls back to a small checkerboard pattern (CSS-generated) so empty state is visually distinct from a white color.
- **Click swatch → open picker** — the swatch button programmatically triggers `.click()` on a hidden `<input type="color">`. Browser shows its native picker dialog. The swatch is a clean colored square (no overlay icon) so the chosen color reads at a glance.
- **Clear button** — opt in with `clearable` (default `false`). It is rendered by the inner `<sd-input>` (shared `.sd-clear-btn`, thin `close` icon), shown to the left of the swatch when the field has a value AND is editable AND not `required`. It is **hover-gated** (only visible on hover/focus). Click clears the model to `null` and emits `sdChange(null)` (the inner input emits `null`/`''` → `onInputChange` normalizes to `null`; `undefined` stays only for the pristine never-touched state). The clear click does NOT open the picker. `input-color` no longer ships its own clear markup — it relies on the built-in one.
- **Disabled / readonly / `viewed === true`** — swatch button is disabled, picker won't open, clear button is hidden.
- **`viewed === 'inline'`** — forwarded to the inner `<sd-input>` (borderless click-to-edit). `openPicker()` and `clear()` remain functional in this mode; they are gated on `isViewed()` (strictly `viewed === true`), not on raw truthiness of `viewed`. Disabled + `'inline'` degrades to the static view, so both become no-ops again.
- **Known limitation — no swatch in `'inline'` mode.** `<sd-input>` renders `<sd-inline-text>` for `'inline'`, and that branch does not project `sdSuffixDef`, so the swatch button and the hidden `<input type="color">` are not in the DOM. `openPicker()` is therefore reachable but has nothing to click until the inline branch gains suffix projection. Use `viewed="false"` when the user needs the OS colour picker.

## Visual cues

- Looks like `<sd-input>` with a square color swatch suffix.
- The swatch shows the current color when the hex value is valid.
- Empty or invalid values render a checkerboard fallback so white and empty are visually different.
- The browser native color picker opens when the user clicks the swatch.
- With `clearable`, the built-in `<sd-input>` clear button appears only when editable, non-empty, and not required.

## Standalone imports and table-cell usage

Every standalone host that uses `<sd-input-color>` must import `SdInputColor`. The component internally owns its suffix template; consumers usually do not need `SdSuffixDefDirective` unless they also use `sdSuffixDef` elsewhere in the same template.

```ts
import { Component } from '@angular/core';
import { SdTable, SdTableCellDefDirective, SdTableOption } from '@sdcorejs/angular/components/table';
import { SdInputColor } from '@sdcorejs/angular/forms';

@Component({
  standalone: true,
  imports: [SdTable, SdTableCellDefDirective, SdInputColor],
  template: `
    <sd-table [option]="tableOption">
      <ng-template sdTableCellDef="color" let-row>
        <sd-input-color size="sm" hideInlineError [(model)]="row.color"> </sd-input-color>
      </ng-template>
    </sd-table>
  `,
})
export class ColorTableComponent {
  tableOption!: SdTableOption<unknown>;
}
```

Inside `<sd-table>` custom cells or custom inline filters, always use `size="sm"` and `hideInlineError`.

```html
<ng-template sdTableCellDef="color" let-row>
  <sd-input-color size="sm" hideInlineError [(model)]="row.color"></sd-input-color>
</ng-template>
```

## Dense dashboard/filter usage

When this control is rendered in dashboard cards, filter bars, external filter panels, table toolbars, query bars, or other compact non-form surfaces, prefer `hideInlineError` so Material does not reserve the inline error/subscript row under the field. Pair it with `size="sm"` when the component supports `size`. Validation remains visible through the compact error icon/tooltip without increasing the control height, and the message is also exposed to assistive tech through a screen-reader-only element (`span.sd-visually-hidden`) referenced by `aria-describedby`.

```html
<sd-input-color size="sm" hideInlineError [(model)]="filter.color"></sd-input-color>
```

## Examples

```html
<sd-input-color label="Màu thương hiệu" helperText="Định dạng #RRGGBB hoặc #RRGGBBAA" [(model)]="brandColor" [required]="true">
</sd-input-color>
```

```ts
brandColor = signal<string | undefined>('#1565C0');
```

## Accessibility

The hidden native `<input type="color">` deliberately **keeps** `aria-hidden="true"`. It is a pure
proxy: `tabindex="-1"`, zero-sized, `pointer-events: none`, and `openPicker()` only calls `.click()`
on it. The real, named control is the visible swatch `<button type="button">` next to it, so exposing
the proxy would add a phantom "color picker" to the accessibility tree.

Everything else (label, text input, `mat-error`, clear button) is inherited from `<sd-input>` — see
`sd-input.md`.

## Anti-patterns

- ❌ Two-way binding to a non-string (number, object) — the model expects a hex string or null/undefined
- ❌ Passing names like `'red'` / `'blue'` — pattern validator will reject; use a `<sd-select>` if you need named colors
- ❌ Skipping `[required]` then trying to enforce non-empty downstream — let the built-in required validator do it

## E2E test attributes

`autoId` is forwarded to the inner `<sd-input>`, so selectors follow the `<sd-input>` autoId scheme.

## Related

- `<sd-input>` — inner text field and validation surface.
- `<sd-select>` — better for curated palettes / named colors.
- `<sd-badge>` — often consumes selected color tokens visually, but is not a color picker.
